[gd_scene load_steps=12 format=3 uid="uid://dbm4rpbhs7wdc"]

[ext_resource type="Texture2D" uid="uid://bai2i1iaif18k" path="res://Images/NegativeTerminal.png" id="1"]
[ext_resource type="PackedScene" path="res://Scenes/Objects/ObjectSlot.tscn" id="2"]
[ext_resource type="Texture2D" uid="uid://dij7fep65ye75" path="res://Images/PositiveTerminal.png" id="3"]
[ext_resource type="PackedScene" path="res://Scenes/UI/GelDisplay.tscn" id="4"]
[ext_resource type="Texture2D" uid="uid://ctbseq5helqq4" path="res://Images/Resized_Images/Gel_Rig.png" id="5"]
[ext_resource type="Script" path="res://Scripts/Objects/ElectrolysisSetup.gd" id="6"]
[ext_resource type="Script" path="res://Scripts/Objects/ElectrodeTerminal.gd" id="7"]
[ext_resource type="Texture2D" uid="uid://b8liaegx1v3x7" path="res://Images/redX.png" id="8"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(131, 59.5)

[sub_resource type="RectangleShape2D" id="2"]
size = Vector2(20, 19)

[sub_resource type="RectangleShape2D" id="3"]
size = Vector2(130, 60.375)

[node name="ElectrolysisSetup" type="RigidBody2D"]
position = Vector2(-3, 35)
gravity_scale = 0.0
script = ExtResource("6")
display_name = "Electrolysis Setup"

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(1, -33)
texture = ExtResource("5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1.5, -30.25)
shape = SubResource("1")

[node name="FollowMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -76.0
offset_top = 54.0
offset_right = -36.0
offset_bottom = 94.0

[node name="SubstanceMenu" type="Control" parent="FollowMenu"]
anchors_preset = 0
offset_left = 4.0
offset_top = -53.0
offset_right = 44.0
offset_bottom = -13.0

[node name="Panel2" type="Panel" parent="FollowMenu/SubstanceMenu"]
layout_mode = 0
offset_left = 22.0
offset_right = 130.0
offset_bottom = 65.0

[node name="FillButton" type="Button" parent="FollowMenu/SubstanceMenu"]
layout_mode = 0
offset_left = 25.0
offset_top = 3.0
offset_right = 126.0
offset_bottom = 30.0
text = "Fill the Setup"

[node name="SubstanceCloseButton" type="Button" parent="FollowMenu/SubstanceMenu"]
layout_mode = 0
offset_left = 26.0
offset_top = 34.0
offset_right = 74.4
offset_bottom = 61.0
text = "Close"

[node name="PosTerminal" type="RigidBody2D" parent="."]
position = Vector2(-59, -53)
gravity_scale = 0.0
script = ExtResource("7")

[node name="Panel" type="Panel" parent="PosTerminal"]
offset_left = -4.0
offset_top = -2.0
offset_right = 20.0
offset_bottom = 20.0
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="PosTerminal"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
mouse_filter = 1
color = Color(0.352941, 0.352941, 0.392157, 1)

[node name="TerminalImg" type="Sprite2D" parent="PosTerminal"]
position = Vector2(7.66094, 8.66094)
scale = Vector2(0.116169, 0.116169)
texture = ExtResource("3")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="PosTerminal"]
position = Vector2(8, 9)
shape = SubResource("2")

[node name="Area2D" type="Area2D" parent="PosTerminal"]
input_pickable = false
monitorable = false

[node name="CollisionShape2D2" type="CollisionShape2D" parent="PosTerminal/Area2D"]
position = Vector2(8, 8.5)
shape = SubResource("2")

[node name="NegTerminal" type="RigidBody2D" parent="."]
position = Vector2(52, -43)
gravity_scale = 0.0
script = ExtResource("7")

[node name="Panel" type="Panel" parent="NegTerminal"]
offset_left = -10.0
offset_top = -10.0
offset_right = 11.0
offset_bottom = 11.0
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="NegTerminal"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
mouse_filter = 1
color = Color(0.352941, 0.352941, 0.392157, 1)

[node name="TerminalImg" type="Sprite2D" parent="NegTerminal"]
position = Vector2(0.500001, 0.500001)
scale = Vector2(0.117978, 0.117978)
texture = ExtResource("1")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="NegTerminal"]
position = Vector2(1, 1)
shape = SubResource("2")

[node name="Area2D" type="Area2D" parent="NegTerminal"]
input_pickable = false
monitorable = false

[node name="CollisionShape2D2" type="CollisionShape2D" parent="NegTerminal/Area2D"]
position = Vector2(1, 1)
shape = SubResource("2")

[node name="ObjectSlot" parent="." instance=ExtResource("2")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ObjectSlot"]
position = Vector2(1, -30.1875)
shape = SubResource("3")

[node name="GelButton" type="Button" parent="."]
visible = false
offset_left = -124.0
offset_top = -80.0
offset_right = -56.0
offset_bottom = -60.0
disabled = true
text = "View Gel"

[node name="GelSimMenu" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 3.0
offset_top = -82.0
offset_right = 43.0
offset_bottom = -42.0

[node name="GelDisplay" parent="GelSimMenu" instance=ExtResource("4")]
position = Vector2(0, 196)
scale = Vector2(0.5, 0.5)

[node name="CloseButton" type="TextureButton" parent="GelSimMenu"]
layout_mode = 0
offset_left = -130.0
offset_top = 96.0
offset_right = -115.0
offset_bottom = 111.0
texture_normal = ExtResource("8")

[connection signal="pressed" from="FollowMenu/SubstanceMenu/FillButton" to="." method="_on_FillButton_pressed"]
[connection signal="pressed" from="FollowMenu/SubstanceMenu/SubstanceCloseButton" to="." method="_on_SubstanceCloseButton_pressed"]
[connection signal="body_exited" from="PosTerminal/Area2D" to="PosTerminal" method="_on_Area2D_body_exited"]
[connection signal="body_exited" from="NegTerminal/Area2D" to="NegTerminal" method="_on_Area2D_body_exited"]
[connection signal="pressed" from="GelButton" to="." method="_on_GelButton_pressed"]
[connection signal="pressed" from="GelSimMenu/CloseButton" to="." method="_on_CloseButton_pressed"]
